k8s/deployments/argocd/httproute.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gw
      namespace: infra
      sectionName: http
  hostnames:
    - argocd.local
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
